--- a/question/templates/question/t_index.html
+++ b/question/templates/question/t_index.html
@@ -25,12 +25,12 @@
 </div>
 </div>
 
-<div id="QuestionItems" class="TopstoryMain">
+<div id="appendArea" class="TopstoryMain">
 </div>
 
 </div>
 
-<div class="TopstorySideBar 1col-md-3">
+<div class="TopstorySideBar">
     <div class="Card">
         <ul class="TopstorySideBar-navList">
             <li class="TopstorySideBar-navItem TopstorySideBar-inviteItem"><a class="Button TopstorySideBar-navLink Button--plain" href="/notifications/" target="_blank" type="button"><svg class="Zi Zi--Invite TopstorySideBar-navIcon" fill="currentColor" viewBox="0 0 24 24" width="18" height="18"><path d="M17.53 21c-2.47 0-4.471-2.035-4.471-4.545s2.001-4.544 4.47-4.544C20 11.911 22 13.946 22 16.455 22 18.965 19.998 21 17.53 21zm.555-5.116s-.005-2.04 0-2.272c-.014-.753-1.13-.753-1.117 0-.014.724 0 2.272 0 2.272h-2.233c-.745.003-.745 1.14 0 1.14s2.233-.004 2.233-.004v2.272c0 .765 1.12.765 1.117 0-.004-.764 0-2.272 0-2.272s1.488.004 2.237.004c.748 0 .748-1.137-.004-1.14h-2.233zm-5.778-3.074a5.692 5.692 0 0 0-.561 6.936H8.408c-4.514 0-5.32-.154-5.408-1.57 0-2.45 2.42-5.407 5.408-5.407h3.49c.14 0 .271.031.409.041zm-2.33-1.437a4.187 4.187 0 1 1 0-8.373 4.187 4.187 0 0 1 0 8.373z" fill-rule="evenodd"></path></svg><span class="TopstorySideBar-navText">我的提醒</span></a></li>
@@ -57,100 +57,6 @@
 <!-- append by js -->
 <!-- letter（Modal） -->
 <script>
-function appendFeedElement(ret)
-{
-    for(i in ret)
-    {
-    var question_id=ret[i][0];
-    var question_title=ret[i][1];
-    var topic_id=ret[i][2];
-    var topic_name=ret[i][3];
-    var answer_id=ret[i][4];
-    var author_id=ret[i][5];
-    var author_name=ret[i][6];
-    var anthor_avatar=ret[i][7];
-    var anthor_mood=ret[i][8];
-    var answer_content=ret[i][9];
-    var answer_like_nums=ret[i][10];
-    
-    for(var j=0;j<100;j++)
-        answer_content=answer_content+"&nbsp;";
-    var index_img_url=getIndexImg(answer_content);
-    var dataStart='<div class="QuestionFrame Card">\
-                        <div class="Feed">\
-                  ';
-    var data1= '<div class="Feed-title">\
-                    <div class="Feed-meta">\
-                        <span class="Feed-meta-item">来自话题:<span>\
-                        <a href="/topic/'+topic_id+'/" class="TopicPopover" data-topic-id="'+topic_id+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+topic_name+'</a>\
-                    </div>\
-                </div>\
-                ';
-                
-    var data2= '<div class="AuthorInfo Feed-meta-author AuthorInfo--plain">\
-                    <span class="UserLink AuthorInfo-avatarWrapper">\
-                        <a class="UserLink-link PeoplePopover" href="/er/'+author_id+'/" data-author-id="'+author_id+'" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">\
-                            <img src="'+anthor_avatar+'" width="40" height="40">\
-                        </a>\
-                    </span>\
-                    <div class="AuthorInfo-content">\
-                        <div class="AuthorInfo-head">\
-                            <span class="UserLink AuthorInfo-name">\
-                                <a href="/er/'+author_id+'/" class="UserLink-link 1PeoplePopover" data-author-id="'+author_id+'" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">'+author_name+'</a>\
-                            </span>\
-                        </div>\
-                        <div class="AuthorInfo-detail">\
-                            <div class="AuthorInfo-badge">\
-                                <div class="RichText AuthorInfo-badgeText">\
-                                    '+anthor_mood+'\
-                                </div>\
-                            </div>\
-                        </div>\
-                    </div>\
-                </div>\
-                ';
-                
-    var data3=' <div class="ContentItem AnswerItem">\
-                    <h2 class="ContentItem-title">\
-                        <a href="/question/'+question_id+'/?ans='+answer_id+'">'+question_title+'</a>\
-                    </h2>\
-                    <div class="RichContent is-collapsed">\
-                        <div class="RichContent-cover">\
-                            <div class="RichContent-cover-inner" data-index-img-url="'+index_img_url+'"></div>\
-                        </div>\
-                        <div class="RichContent-inner">\
-                            <span class="RichText CopyrightRichText-richText less">'+removeImg(answer_content)+'</span>\
-                            <span class="RichText CopyrightRichText-richText more is-hide">'+answer_content+'</span>\
-                            <button class="Button ContentItem-more NC-RichContent-type1 Button--plain" type="button">\
-                                阅读全文\
-                                <svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" style="height:16px;width:10px;" width="10" height="16" aria-hidden="true" data-reactid="258"><title data-reactid="259"></title><g data-reactid="260"><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg>\
-                            </button>\
-                        </div>\
-                        <div class="ContentItem-actions">\
-                            <span>\
-                                <button class="AnswerLike Button LikeButton ContentItem-action" type="button" data-answer-id="'+answer_id+'">\
-                                    <svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon 1Icon--like" style="height:16px;width:13px;" width="13" height="16" aria-hidden="true" data-reactid="433"><title data-reactid="434"></title><g data-reactid="435"><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>'+answer_like_nums+'\
-                                </button>\
-                            </span>\
-                            <button class="Button ContentItem-less NC-RichContent-type1 ContentItem-rightButton Button--plain is-hide" type="button">\
-                                <span class="RichContent-collapsedText">收起</span>\
-                                <svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg>\
-                            </button>\
-                        </div>\
-                    </div>\
-                </div>\
-                ';
-    
-    var dataEnd='</div>\
-                    </div>\
-                  ';  
-    var elementText=dataStart+data1+data2+data3+dataEnd;
-    $('#QuestionItems').append(elementText);
-    }
-}
-
-
-
 function getMoreData() { 
     var nums=$('.QuestionFrame').length;
     var order=1;//pub_date
@@ -159,7 +65,7 @@ function getMoreData() {
     $.get('/ajax/questions/'+order+'/'+start+'/'+end+'/',function(ret){
         if("fail"!=ret)
         {
-            appendFeedElement(ret);  
+            appendAnswerElementCard(ret,"has_topic_question_title");  
             checkSets();
         }
         setLockScrollMoreData("false");
