--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -175,7 +175,7 @@
         </div>
         </div>
         
-        <div id="AnswerItems">
+        <div id="listArea">
         {% if push_answer %}
         <div class="Card">
         <a class="QuestionMainAction" data-za-detail-view-element_name="ViewAll" href="/question/{{ context_question.id }}">查看全部 {{context_question.answer_nums}} 个回答</a>
@@ -214,17 +214,21 @@
         </div>
         
         <div class="RichContent RichContent--unescapable">
+         <div class="RichContent-expand">
             <div class="RichContent-inner">
                 <span class="RichText CopyrightRichText-richText" data-content="{{push_answer.content}}">{{push_answer.content|safe}}</span>
             </div>
-            <button class="Button ContentItem-more NC-RichContent-type2 ContentItem-rightButton Button--plain is-hide" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
+            <button class="Button ContentItem-more ContentItem-rightButton Button--plain is-hide" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
+          </div>
             <div class="ContentItem-actions">
                 <span>
                     <button class="AnswerLike Button LikeButton ContentItem-action" type="button" data-answer-id="{{push_answer.id}}">
                         <svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon 1Icon--like" style="height:16px;width:13px;" width="13" height="16" aria-hidden="true" data-reactid="433"><title data-reactid="434"></title><g data-reactid="435"><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>{{push_answer.like_nums}}
                     </button>
                 </span>
-                <button class="Button ContentItem-less NC-RichContent-type2 ContentItem-rightButton Button--plain" type="button">
+                <button class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span>0 条评论</button>
+                <div class="Popover ShareMenu ContentItem-action"><div class="" aria-haspopup="true" aria-expanded="false"><img class="ShareMenu-fakeQRCode" src="" alt="微信二维码"><button class="Button Button--plain Button--withIcon Button--withLabel" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Share Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M2.931 7.89c-1.067.24-1.275 1.669-.318 2.207l5.277 2.908 8.168-4.776c.25-.127.477.198.273.39L9.05 14.66l.927 5.953c.18 1.084 1.593 1.376 2.182.456l9.644-15.242c.584-.892-.212-2.029-1.234-1.796L2.93 7.89z" fill-rule="evenodd"></path></svg></span>分享</button></div></div>
+                <button class="Button ContentItem-less ContentItem-rightButton Button--plain" type="button">
                     <span class="RichContent-collapsedText">收起</span>
                     <svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg>
                 </button>
@@ -243,7 +247,7 @@
         <div class="List-headerOptions">
         </div>
         </div>
-        
+        <div id="appendArea"></div>
         </div>
         </div>
                 
@@ -326,143 +330,6 @@
 </div>
 <!--- div other for invite--->
 <script>
-function appendMoreAnswerListElement(ret)
-{
-    for(i in ret)
-    {
-        var answer_id=ret[i][0];
-        var answer_content=ret[i][1]+"<p>&nbsp;</p><p>&nbsp;</p>";
-        var answer_like_nums=ret[i][2];
-        var answer_comment_nums=ret[i][3];
-        var answer_pub_date=ret[i][4];
-        var author_id=ret[i][5];
-        var author_name=ret[i][6];
-        var author_avatar=ret[i][7];
-        var author_mood=ret[i][8];
-        
-        
-        var data='<div class="List-item">\
-        <div class="ContentItem AnswerItem">\
-        <div class="ContentItem-meta">\
-        <div class="AnswerItem-meta AnswerItem-meta--related">\
-        <div class="AuthorInfo">\
-        <span class="UserLink AuthorInfo-avatarWrapper">\
-        <a class="UserLink-link PeoplePopover" href="/er/'+author_id+'" data-author-id="'+author_id+'" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">\
-        <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'">\
-        </a>\
-        </span>\
-        <div class="AuthorInfo-content">\
-        <div class="AuthorInfo-head">\
-        <span class="UserLink AuthorInfo-name">\
-        <a class="UserLink-link" href="/er/'+author_id+'">'+author_name+'</a>\
-        </span>\
-        </div>\
-        <div class="AuthorInfo-detail">\
-        <div class="AuthorInfo-badge">\
-        <div class="RichText AuthorInfo-badgeText">'+author_mood+'</div>\
-        </div>\
-        </div>\
-        </div>\
-        </div>\
-        <div class="AnswerItem-extraInfo">\
-        <span class="Voters">\
-        <button class="Button Button--plain" type="button">'+answer_like_nums+' 人赞同了该回答</button>\
-        </span>\
-        </div>\
-        </div>\
-        </div>\
-        <div class="RichContent RichContent--unescapable is-collapsed">\
-        <div class="RichContent-inner" style="max-height:400px">\
-            <span class="RichText CopyrightRichText-richText">'+answer_content+'</span>\
-        </div>\
-        <button class="Button ContentItem-more NC-RichContent-type2 ContentItem-rightButton Button--plain" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
-        <div class="ContentItem-actions">\
-            <span>\
-                <button class="AnswerLike Button LikeButton ContentItem-action" type="button" data-answer-id="'+answer_id+'"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon 1Icon--like" style="height:16px;width:13px;" width="13" height="16" aria-hidden="true" data-reactid="433"><title data-reactid="434"></title><g data-reactid="435"><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>'+answer_like_nums+'</button>\
-            </span>\
-            <button class="Button ContentItem-less NC-RichContent-type2 ContentItem-rightButton Button--plain  is-hide" type="button">\
-                <span class="RichContent-collapsedText">收起</span>\
-                <svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg>\
-            </button>\
-        </div>\
-        </div>\
-        </div>\
-        </div>\
-        ';
-        
-        $("#AnswerItems .List").append(data);
-    }
-}
-
-function appendNormalAnswerListElement(ret) //"type_list"
-{
-    for(i in ret)
-    {
-        var answer_id=ret[i][0];
-        var answer_content=ret[i][1]+"<p>&nbsp;</p><p>&nbsp;</p>";
-        var answer_like_nums=ret[i][2];
-        var answer_comment_nums=ret[i][3];
-        var answer_pub_date=ret[i][4];
-        var author_id=ret[i][5];
-        var author_name=ret[i][6];
-        var author_avatar=ret[i][7];
-        var author_mood=ret[i][8];       
-        
-        var data='<div class="List-item">\
-        <div class="ContentItem AnswerItem">\
-        <div class="ContentItem-meta">\
-        <div class="AnswerItem-meta AnswerItem-meta--related">\
-        <div class="AuthorInfo">\
-        <span class="UserLink AuthorInfo-avatarWrapper">\
-        <a class="UserLink-link PeoplePopover" href="/er/'+author_id+'"  data-author-id="'+author_id+'" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">\
-        <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'">\
-        </a>\
-        </span>\
-        <div class="AuthorInfo-content">\
-        <div class="AuthorInfo-head">\
-        <span class="UserLink AuthorInfo-name">\
-        <a class="UserLink-link" href="/er/'+author_id+'">'+author_name+'</a>\
-        </span>\
-        </div>\
-        <div class="AuthorInfo-detail">\
-        <div class="AuthorInfo-badge">\
-        <div class="RichText AuthorInfo-badgeText">'+author_mood+'</div>\
-        </div>\
-        </div>\
-        </div>\
-        </div>\
-        <div class="AnswerItem-extraInfo">\
-        <span class="Voters">\
-        <button class="Button Button--plain" type="button">'+answer_like_nums+' 人赞同了该回答</button>\
-        </span>\
-        </div>\
-        </div>\
-        </div>\
-        <div class="RichContent RichContent--unescapable">\
-        <div class="RichContent-inner">\
-            <span class="RichText CopyrightRichText-richText">'+answer_content+'</span>\
-        </div>\
-        <button class="Button ContentItem-more NC-RichContent-type2 ContentItem-rightButton Button--plain is-hide" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
-        <div class="ContentItem-actions">\
-            <span>\
-                <button class="AnswerLike Button LikeButton ContentItem-action" type="button" data-answer-id="'+answer_id+'"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon 1Icon--like" style="height:16px;width:13px;" width="13" height="16" aria-hidden="true" data-reactid="433"><title data-reactid="434"></title><g data-reactid="435"><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>'+answer_like_nums+'</button>\
-            </span>\
-            <button class="Button ContentItem-less NC-RichContent-type2 ContentItem-rightButton Button--plain" type="button">\
-                <span class="RichContent-collapsedText">收起</span>\
-                <svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg>\
-            </button>\
-        </div>\
-        </div>\
-        </div>\
-        </div>\
-        ';
-        
-        $("#AnswerItems .List").append(data);
-    }
-}
-
-
-
 function invite()
 {
     $(".Invite").each(function(index,element){
@@ -638,7 +505,7 @@ function getMoreAnswerData()
         $.get('/ajax/answers/'+question_id+'/'+order+'/'+start+'/'+end+'/',function(ret){
             if("fail"!=ret)
             {
-                appendMoreAnswerListElement(ret);
+                appendAnswerElementList(ret,"more");
                 checkSets();
             }
             setLockScrollMoreData("false");
@@ -646,7 +513,7 @@ function getMoreAnswerData()
 }
 function getAllAnswerData()
 {
-        var nums=$('#AnswerItems .List-item').length;
+        var nums=0;//$('#AnswerItems .List-item').length;
         var order=1;
         var start=nums;
         var end=start+STEP;
@@ -654,7 +521,7 @@ function getAllAnswerData()
         $.get('/ajax/answers/'+question_id+'/'+order+'/'+start+'/'+end+'/',function(ret){
             if("fail"!=ret)
             {
-                appendNormalAnswerListElement(ret);
+                appendAnswerElementList(ret,"all");
                 checkSets();
             }
             setLockScrollMoreData("false");
@@ -678,10 +545,11 @@ function initAllAnswerList()
             <span>'+answer_nums+' 个回答</span>\
             </h4>\
             </div>\
+            <div id="appendArea"></div>\
             </div>\
             </div>\
             ';
-        $("#AnswerItems").append(data);
+        $("#listArea").append(data);
 }
 
 function init()
