--- a/static/common/main.css
+++ b/static/common/main.css
@@ -967,7 +967,18 @@ html[data-theme=dark] .Post-Main .PostIndex-reviewers{color:#606a80}
 
 /************for comment****************/
 .CommentItem.CommentItem--border{border: 1px solid #ddd;background-color:#f6f6f6;}
-/****************************/
+/*************for likebutton***************/
+.Button-like-nouse{padding:0 15px;text-align:center;border-radius:3px;-webkit-box-sizing:border-box;box-sizing:border-box}
+.Button-like-nouse:disabled{color:#2d84cc;opacity:unset}
+.Button-like-nouse:disabled:hover{color:#2d84cc;opacity:unset}
+.Button-like-nouse .Icon {
+    margin-right: 7px;
+    fill: currentColor;
+}
+.Button-like-nouse:disabled:hover .Icon {
+    margin-right: 7px;
+    fill: currentColor;
+}
 
 
 
