--- a/static/common/mobile_main.css
+++ b/static/common/mobile_main.css
@@ -951,6 +951,19 @@ html[data-theme=dark] .Post-Main .PostIndex-reviewers{color:#606a80}
     position: relative;
 }
 .CommentItem.CommentItem--border{border: 1px solid #ddd;background-color:#f6f6f6;}
+/*************for likebutton***************/
+.Button-like-nouse{padding:0 15px;text-align:center;border-radius:3px;-webkit-box-sizing:border-box;box-sizing:border-box}
+.Button-like-nouse:disabled{color:#2d84cc;opacity:unset}
+.Button-like-nouse:disabled:hover{color:#2d84cc;opacity:unset}
+.Button-like-nouse .Icon {
+    margin-right: 7px;
+    fill: currentColor;
+}
+.Button-like-nouse:disabled:hover .Icon {
+    margin-right: 7px;
+    fill: currentColor;
+}
+
 /************for question page****************/
 .MobileQuestionButtonGroup .Button {
     margin-right: 10px;
